refactor: style on placeholder

--- a/packages/shared/src/components/fields/fields.module.css
+++ b/packages/shared/src/components/fields/fields.module.css
@@ -15,4 +15,8 @@
   & input::placeholder {
     color: var(--field-placeholder-color);
   }
+
+  & input:focus::placeholder {
+    color: var(--theme-label-quaternary);
+  }
 }
