--- a/packages/shared/src/components/markdown.module.css
+++ b/packages/shared/src/components/markdown.module.css
@@ -52,22 +52,10 @@
     @apply text-theme-label-link hover:underline;
   }
   & :where(a[data-mention-username]) {
-    @apply z-0 relative text-theme-label-primary hover:underline font-bold px-1 rounded-6;
-    &:before {
-      content: '';
-      @apply -z-1 absolute w-full h-full left-0 top-0 rounded-6 bg-theme-overlay-water opacity-24;
-    }
-    &:after {
-      content: '';
-      @apply -z-1 absolute w-full h-full left-0 top-0 rounded-6 bg-theme-status-cabbage opacity-24;
-    }
+    @apply relative text-theme-label-primary hover:underline bg-theme-bg-mention-primary font-bold px-1 rounded-6;
+    
     &:hover {
-      &::before {
-        @apply opacity-32;
-      }
-      &::after {
-        @apply opacity-32;
-      }
+      @apply bg-theme-bg-mention-hover;
     }
   }
   & :where(hr) {
