--- a/packages/shared/src/styles/base.css
+++ b/packages/shared/src/styles/base.css
@@ -54,12 +54,14 @@ body {
   --theme-status-help: theme('colors.cheese.40');
   --theme-status-success: theme('colors.avocado.40');
   --theme-status-warning: theme('colors.bun.40');
-  --theme-status-cabbage: theme('colors.cabbage.40'); /* temporary */
+  --theme-status-cabbage: theme('colors.cabbage.40');
   --theme-status-fill: theme('colors.water.40');
 
   --theme-shadow2: theme('boxShadow.2-black');
   --theme-shadow3: theme('boxShadow.3-black');
 
+  --theme-mention: rgba(206, 61, 243, 0.24);
+  --theme-mention-hover: rgba(206, 61, 243, 0.32);
   --theme-post-disabled: theme('colors.pepper.70')66;
 
   --theme-overlay-quaternary: theme('colors.overlay.quaternary.white');
@@ -152,12 +154,14 @@ body {
   --theme-status-help: theme('colors.cheese.60');
   --theme-status-success: theme('colors.avocado.60');
   --theme-status-warning: theme('colors.bun.60');
-  --theme-status-cabbage: theme('colors.cabbage.60'); /* temporary */
+  --theme-status-cabbage: theme('colors.cabbage.60');
   --theme-status-fill: theme('colors.water.60');
 
   --theme-shadow2: theme('boxShadow.2-salt');
   --theme-shadow3: theme('boxShadow.3-salt');
 
+  --theme-mention: rgba(172, 29, 228, 0.24);
+  --theme-mention-hover: rgba(172, 29, 228, 0.32);
   --theme-post-disabled: #ffffff66;
 
   --theme-overlay-quaternary: theme('colors.overlay.quaternary.pepper');
