--- a/packages/shared/src/components/markdown.module.css
+++ b/packages/shared/src/components/markdown.module.css
@@ -1,4 +1,6 @@
 .markdown {
+  position: relative;
+
   & :where(h1) {
     @apply font-bold typo-title2 mt-10 mb-7;
   }
@@ -18,7 +20,7 @@
     @apply text-theme-label-tertiary font-bold mt-4 mb-3;
   }
   & :where(p) {
-    @apply my-7;
+    @apply my-7 relative;
   }
   & :where(blockquote) {
     @apply typo-body italic pl-7 my-7 border-l border-theme-divider-secondary;
@@ -52,22 +54,10 @@
     @apply text-theme-label-link hover:underline;
   }
   & :where(a[data-mention-username]) {
-    @apply z-0 relative text-theme-label-primary hover:underline font-bold px-1 rounded-6;
-    &:before {
-      content: '';
-      @apply -z-1 absolute w-full h-full left-0 top-0 rounded-6 bg-theme-overlay-water opacity-24;
-    }
-    &:after {
-      content: '';
-      @apply -z-1 absolute w-full h-full left-0 top-0 rounded-6 bg-theme-status-cabbage opacity-24;
-    }
+    @apply relative text-theme-label-primary hover:underline bg-theme-bg-mention-primary font-bold px-1 rounded-6;
+
     &:hover {
-      &::before {
-        @apply opacity-32;
-      }
-      &::after {
-        @apply opacity-32;
-      }
+      @apply bg-theme-bg-mention-hover;
     }
   }
   & :where(hr) {
