--- a/packages/shared/src/components/utilities.module.css
+++ b/packages/shared/src/components/utilities.module.css
@@ -36,6 +36,18 @@
   }
 }
 
+.fixedPostsNavigation {
+  max-width: calc(100vw - 15 s.25rem);
+
+  @screen tablet {
+    max-width: calc(100vw - 19.25rem);
+  }
+
+  @screen laptop {
+    max-width: inherit;
+  }
+}
+
 .activeTabIndicator {
   border-radius: 0.063rem;
 }
