--- a/packages/shared/src/components/modals/PostModal.module.css
+++ b/packages/shared/src/components/modals/PostModal.module.css
@@ -14,7 +14,7 @@
     @apply bg-theme-bg-primary;
 
     position: absolute;
-    max-width: 63.75rem;
+    max-width: 100vw;
     height: 100%;
     max-height: 100%;
     align-items: stretch;
@@ -27,6 +27,7 @@
     }
 
     @screen laptop {
+      max-width: 63.75rem;
       max-height: calc(100% - 7rem);
       border-radius: 1rem;
       border: 1px solid var(--theme-divider-secondary);
