--- a/packages/shared/src/components/modals/PostModal.module.css
+++ b/packages/shared/src/components/modals/PostModal.module.css
@@ -3,6 +3,15 @@
     position: relative;
     min-height: 100vh;
     padding: 0;
+    overflow-y: auto;
+
+    @screen tablet {
+      margin-top: 3.5rem;
+    }
+
+    @screen laptop {
+      margin-top: 0;
+    }
 
     @screen responsiveModalBreakpoint {
       position: fixed;
@@ -15,22 +24,23 @@
 
     position: absolute;
     max-width: 100vw;
-    height: 100%;
-    max-height: 100%;
     align-items: stretch;
     border: none;
     border-radius: 0;
+    max-height: unset;
+    height: unset;
+    position: absolute;
+    top: 0;
 
     @screen responsiveModalBreakpoint {
-      position: relative;
       min-height: unset;
     }
 
     @screen laptop {
       max-width: 63.75rem;
-      max-height: calc(100% - 7rem);
       border-radius: 1rem;
       border: 1px solid var(--theme-divider-secondary);
+      margin-top: 5rem;
     }
   }
 }
