--- a/packages/shared/src/components/modals/PostModal.module.css
+++ b/packages/shared/src/components/modals/PostModal.module.css
@@ -4,6 +4,8 @@
     min-height: 100vh;
     padding: 0;
     overflow-y: auto;
+    flex-direction: unset;
+    align-items: unset;
 
     @screen tablet {
       margin-top: 3.5rem;
@@ -27,7 +29,7 @@
     border: none;
     border-radius: 0;
     max-height: unset;
-    height: unset;
+    height: fit-content;
     position: absolute;
     top: 0;
 
@@ -40,6 +42,8 @@
       border-radius: 1rem;
       border: 1px solid var(--theme-divider-secondary);
       margin-top: 5rem;
+      margin-bottom: 2rem;
+      position: relative;
     }
   }
 }
