fix: useless tailwind arbitrary value

--- a/packages/shared/src/components/utilities.module.css
+++ b/packages/shared/src/components/utilities.module.css
@@ -47,3 +47,10 @@
 .activeTabIndicator {
   border-radius: 0.063rem;
 }
+
+.postContent {
+  @screen laptop {
+    width: 40.75rem;
+    max-width: 40.75rem;
+  }
+}
