--- a/packages/shared/src/components/utilities.module.css
+++ b/packages/shared/src/components/utilities.module.css
@@ -22,15 +22,9 @@
     width: $pageMaxWidth;
     margin: auto;
   }
-}
 
-.pageWidgets {
-  max-width: $pageMaxWidth;
-  position: relative;
-
-  @screen laptopL {
-    position: absolute;
-    left: 100%;
+  &:global(.modal-post) {
+    margin: unset;
   }
 }
 
@@ -42,6 +36,26 @@
   }
 }
 
+.fixedPostsNavigation {
+  max-width: 100vw;
+
+  @screen laptop {
+    max-width: 63.65rem;
+  }
+}
+
 .activeTabIndicator {
   border-radius: 0.063rem;
+}
+
+.pageWidgets {
+  @screen tablet {
+    width: 18.75rem;
+    max-width: 18.75rem;
+  }
+
+  @screen laptop {
+    width: 23rem;
+    max-width: 23rem;
+  }
 }
