--- a/packages/shared/src/components/modals/PostModal.module.css
+++ b/packages/shared/src/components/modals/PostModal.module.css
@@ -1,39 +1,41 @@
 .postModal {
-  & :global(.overlay.post-modal) {
-    position: relative;
+  & :global(.post-modal-overlay) {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     min-height: 100vh;
     padding: 0;
     overflow-y: scroll;
-    flex-direction: unset;
-    align-items: unset;
-
-    @screen tablet {
-      margin-top: 0;
-    }
-
-    @screen responsiveModalBreakpoint {
-      position: fixed;
-      min-height: unset;
-    }
+    z-index: 10;
+    background: var(--theme-overlay-quaternary);
   }
 
-  & :global(.modal.post-modal) {
+  & :global(.post-modal) {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: min-content;
+  }
+
+  & :global(.post-content) {
     @apply bg-theme-bg-primary;
 
-    max-width: 100vw;
-    align-items: stretch;
+    display: flex;
+    flex-direction: col;
+    justify-content: center;
     border: none;
     border-radius: 0;
-    max-height: unset;
-    height: fit-content;
-    position: absolute;
-    top: 0;
+    width: 100vw;
+    max-width: 100vw;
 
-    @screen responsiveModalBreakpoint {
-      min-height: unset;
+    @screen tablet {
+      flex-direction: row;
     }
 
     @screen laptop {
+      width: 63.75rem;
       max-width: 63.75rem;
       border-radius: 1rem;
       border: 1px solid var(--theme-divider-secondary);
@@ -41,10 +43,5 @@
       margin-bottom: 3.5rem;
       position: relative;
     }
-  }
-}
-.addPadding {
-  & :global(.modal) {
-    padding: 0.5rem;
   }
 }
