--- a/packages/shared/src/components/modals/PostModal.module.css
+++ b/packages/shared/src/components/modals/PostModal.module.css
@@ -1,50 +1,50 @@
 .postModal {
-  & :global(.post-modal-overlay) {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+  & :global(.overlay.post-modal) {
+    position: relative;
     min-height: 100vh;
     padding: 0;
     overflow-y: scroll;
-    z-index: 10;
-    background: var(--theme-overlay-quaternary);
-  }
-
-  & :global(.post-modal) {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: min-content;
-  }
-
-  & :global(.post-content) {
-    @apply bg-theme-bg-primary;
-
-    display: flex;
-    flex-direction: col;
-    justify-content: center;
-    border: none;
-    border-radius: 0;
-    width: 100vw;
-    max-width: 100vw;
-    padding-bottom: 4rem;
+    flex-direction: unset;
+    align-items: unset;
 
     @screen tablet {
-      flex-direction: row;
-      min-height: calc(100vh - 4rem);
-      padding-bottom: 0;
+      margin-top: 0;
+    }
+
+    @screen responsiveModalBreakpoint {
+      position: fixed;
+      min-height: unset;
+    }
   }
 
+  & :global(.modal.post-modal) {
+    @apply bg-theme-bg-primary;
+
+    max-width: 100vw;
+    align-items: stretch;
+    border: none;
+    border-radius: 0;
+    max-height: unset;
+    height: fit-content;
+    position: absolute;
+    top: 0;
+
+    @screen responsiveModalBreakpoint {
+      min-height: unset;
+    }
+
     @screen laptop {
-      height: unset;
-      width: 63.75rem;
       max-width: 63.75rem;
       border-radius: 1rem;
       border: 1px solid var(--theme-divider-secondary);
       margin-top: 3.5rem;
       margin-bottom: 3.5rem;
+      position: relative;
     }
+  }
+}
+.addPadding {
+  & :global(.modal) {
+    padding: 0.5rem;
   }
 }
