--- a/packages/shared/src/components/modals/ResponsiveModal.module.css
+++ b/packages/shared/src/components/modals/ResponsiveModal.module.css
@@ -4,6 +4,10 @@
     min-height: 100vh;
     padding: 0;
 
+    &:global(.fixed-position) {
+      position: fixed;
+    }
+
     @screen responsiveModalBreakpoint {
       position: fixed;
       min-height: unset;
@@ -26,6 +30,7 @@
     }
   }
 }
+
 .addPadding {
   & :global(.modal) {
     padding: 0.5rem;
