--- a/packages/shared/src/components/notifications/Toast.module.css
+++ b/packages/shared/src/components/notifications/Toast.module.css
@@ -1,12 +1,19 @@
 .toastContainer {
   z-index: 100;
-  transform: translate(-50%, 0);
+  transform: translate(-50%, 5rem);
+  transition: transform 0.14s ease-in-out;
 
-  /* speces */
   @screen tablet {
+    @apply top-8;
+    bottom: unset;
     min-width: 12.5rem;
     max-width: 25rem;
     min-height: 2.75rem;
     max-height: 4.125rem;
+    transform: translate(-50%, -5rem);
+  }
+
+  &:global(.slide-in) {
+    transform: translate(-50%, 0);
   }
 }
