--- a/packages/extension/public/css/daily-companion-app.css
+++ b/packages/extension/public/css/daily-companion-app.css
@@ -6,6 +6,6 @@ daily-companion-app {
   tab-size: 4;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Ubuntu, Segoe UI, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
   position: fixed;
-  z-index: 100001;
+  z-index: 2147483647;
   font-feature-settings: normal!important;
 }
