fix: font rendered different on some sites (#1021)
We adapted font-rendering from each website, but we wanted to render smoothly
This PR introduces the same font rendering for all websites so we uniform our companion fonts.

WT-106 #done

--- a/packages/extension/public/css/daily-companion-app.css
+++ b/packages/extension/public/css/daily-companion-app.css
@@ -7,5 +7,8 @@ daily-companion-app {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Ubuntu, Segoe UI, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
   position: fixed;
   z-index: 2147483647;
-  font-feature-settings: normal!important;
+  font-feature-settings: normal !important;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
